Shorten the size of the maintained top site list from 20 to 10

Currently, TopSites maintains a list of 20 top sites excluding the blacklist. Whenever there is
a change in these 20 sites, TopSites updates its related database on disk via a task called
TopSitesBackend::UpdateTopSitesOnDBThread. The task takes more than 900 ms on average and has a
very high jank rate. These evidences show that it's the most expensive operation on the DB thread.
In addition to updating DB, TopSites also notifies its observers about the change so that work is
triggered in observer classes.

However, only the top 8 sites are used by the observers of TopSites. In more details, apart from
JumpList which uses the top 5 sites, all its observers use only the top 8 sites. These observers
include InstantService, MostVistedSites, SpotlightTopSitesBridge and GlobalMenuBarX11.

These facts indicate TopSites is maintaining more sites than needed. This CL changes TopSites to
maintain only 10 top sites to trim out that waste. We prefer 10 over 8 because in that way, there
is a bit of a buffer if the user blacklists a url and won't end up with an empty thumbnail.

Bug: 763103, 763519
Change-Id: Ia0355cff95c8df23335c564a492a62e0011bc6f8
Reviewed-on: https://chromium-review.googlesource.com/656399
Commit-Queue: Xi Cheng <chengx@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501131}
Former-commit-id: efddaef85901ddb8070f3b0c5207784c65943a1a