components/history/core/browser/top_sites_impl.cc
@@ -80,12 +80,6 @@ bool DoTitlesDiffer(const MostVisitedURLList& old_list,
                      });
 }
 
-// How many non-forced top sites to store in the cache.
-const size_t kNonForcedTopSitesNumber = 20;
-
-// How many forced top sites to store in the cache.
-const size_t kForcedTopSitesNumber = 20;
-
 // Max number of temporary images we'll cache. See comment above
 // temp_images_ for details.
 const size_t kMaxTempTopImages = 8;
