components/history/core/browser/top_sites_impl_unittest.cc
@@ -484,7 +484,7 @@ TEST_F(TopSitesImplTest, DiffMostVisited) {
   AppendMostVisitedURL(gets_moved_1, &new_list);    // 3  (moved from 2)
 
   history::TopSitesDelta delta;
-  history::TopSitesImpl::DiffMostVisited(old_list, new_list, &delta);
+  TopSitesImpl::DiffMostVisited(old_list, new_list, &delta);
 
   ASSERT_EQ(2u, delta.added.size());
   EXPECT_TRUE(gets_added_1 == delta.added[0].url.url);
@@ -538,8 +538,8 @@ TEST_F(TopSitesImplTest, DiffMostVisitedWithForced) {
   AppendMostVisitedURL(gets_added_2, &new_list);
   AppendMostVisitedURL(gets_moved_1, &new_list);
 
-  history::TopSitesDelta delta;
-  history::TopSitesImpl::DiffMostVisited(old_list, new_list, &delta);
+  TopSitesDelta delta;
+  TopSitesImpl::DiffMostVisited(old_list, new_list, &delta);
 
   ASSERT_EQ(2u, delta.added.size());
   EXPECT_TRUE(gets_added_1 == delta.added[0].url.url);
@@ -1433,9 +1433,8 @@ TEST_F(TopSitesImplTest, SetForcedTopSites) {
   AppendForcedMostVisitedURL(GURL("http://oldforced/4"), 11000, &old_url_list);
   AppendForcedMostVisitedURL(GURL("http://oldforced/5"), 12000, &old_url_list);
   AppendForcedMostVisitedURL(GURL("http://oldforced/6"), 13000, &old_url_list);
-  AppendForcedMostVisitedURL(GURL("http://oldforced/7"), 18000, &old_url_list);
-  AppendForcedMostVisitedURL(GURL("http://oldforced/8"), 21000, &old_url_list);
-  const size_t kNumOldForcedURLs = 9;
+
+  const size_t kNumOldForcedURLs = old_url_list.size();
 
   // Create forced elements in new URL list.
   MostVisitedURLList new_url_list;
@@ -1448,14 +1447,12 @@ TEST_F(TopSitesImplTest, SetForcedTopSites) {
   AppendForcedMostVisitedURL(GURL("http://newforced/6"), 14000, &new_url_list);
   AppendForcedMostVisitedURL(GURL("http://newforced/7"), 15000, &new_url_list);
   AppendForcedMostVisitedURL(GURL("http://newforced/8"), 16000, &new_url_list);
-  AppendForcedMostVisitedURL(GURL("http://newforced/9"), 17000, &new_url_list);
-  AppendForcedMostVisitedURL(GURL("http://newforced/10"), 19000, &new_url_list);
-  AppendForcedMostVisitedURL(GURL("http://newforced/11"), 20000, &new_url_list);
-  AppendForcedMostVisitedURL(GURL("http://newforced/12"), 22000, &new_url_list);
+
+  const size_t kNonForcedTopSitesCount = TopSitesImpl::kNonForcedTopSitesNumber;
+  const size_t kForcedTopSitesCount = TopSitesImpl::kForcedTopSitesNumber;
 
   // Setup a number non-forced URLs in both old and new list.
-  const size_t kNumNonForcedURLs = 20;  // Maximum number of non-forced URLs.
-  for (size_t i = 0; i < kNumNonForcedURLs; ++i) {
+  for (size_t i = 0; i < kNonForcedTopSitesCount; ++i) {
     std::ostringstream url;
     url << "http://oldnonforced/" << i;
     AppendMostVisitedURL(GURL(url.str()), &old_url_list);
@@ -1466,19 +1463,20 @@ TEST_F(TopSitesImplTest, SetForcedTopSites) {
 
   // Set the initial list of URLs.
   SetTopSites(old_url_list);
-  EXPECT_EQ(kNumOldForcedURLs + kNumNonForcedURLs, last_num_urls_changed());
+  EXPECT_EQ(kNumOldForcedURLs + kNonForcedTopSitesCount,
+            last_num_urls_changed());
 
   TopSitesQuerier querier;
   // Query only non-forced URLs first.
   querier.QueryTopSites(top_sites(), false);
-  ASSERT_EQ(kNumNonForcedURLs, querier.urls().size());
+  ASSERT_EQ(kNonForcedTopSitesCount, querier.urls().size());
 
   // Check first URL.
   EXPECT_EQ("http://oldnonforced/0", querier.urls()[0].url.spec());
 
   // Query all URLs.
   querier.QueryAllTopSites(top_sites(), false, true);
-  EXPECT_EQ(kNumOldForcedURLs + kNumNonForcedURLs, querier.urls().size());
+  EXPECT_EQ(kNumOldForcedURLs + kNonForcedTopSitesCount, querier.urls().size());
 
   // Check first URLs.
   EXPECT_EQ("http://oldforced/0", querier.urls()[0].url.spec());
@@ -1491,57 +1489,42 @@ TEST_F(TopSitesImplTest, SetForcedTopSites) {
   // Query all URLs.
   querier.QueryAllTopSites(top_sites(), false, true);
 
-  // We should have reached the maximum of 20 forced URLs.
-  ASSERT_EQ(20 + kNumNonForcedURLs, querier.urls().size());
+  // We should have reached the maximum of forced URLs.
+  ASSERT_EQ(kForcedTopSitesCount + kNonForcedTopSitesCount,
+            querier.urls().size());
 
   // Check forced URLs. They follow the order of timestamps above, smaller
   // timestamps since they were evicted.
-  EXPECT_EQ("http://newforced/1", querier.urls()[0].url.spec());
-  EXPECT_EQ(3000, querier.urls()[0].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://oldforced/1", querier.urls()[1].url.spec());
-  EXPECT_EQ(4000, querier.urls()[1].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://newforced/2", querier.urls()[2].url.spec());
-  EXPECT_EQ(5000, querier.urls()[2].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://newforced/3", querier.urls()[3].url.spec());
-  EXPECT_EQ(6000, querier.urls()[3].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://oldforced/2", querier.urls()[4].url.spec());
-  EXPECT_EQ(7000, querier.urls()[4].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://newforced/4", querier.urls()[5].url.spec());
-  EXPECT_EQ(8000, querier.urls()[5].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://newforced/5", querier.urls()[6].url.spec());
-  EXPECT_EQ(9000, querier.urls()[6].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://oldforced/3", querier.urls()[7].url.spec());
-  EXPECT_EQ(10000, querier.urls()[7].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://oldforced/4", querier.urls()[8].url.spec());
-  EXPECT_EQ(11000, querier.urls()[8].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://oldforced/5", querier.urls()[9].url.spec());
-  EXPECT_EQ(12000, querier.urls()[9].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://oldforced/6", querier.urls()[10].url.spec());
-  EXPECT_EQ(13000, querier.urls()[10].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://newforced/6", querier.urls()[11].url.spec());
-  EXPECT_EQ(14000, querier.urls()[11].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://newforced/7", querier.urls()[12].url.spec());
-  EXPECT_EQ(15000, querier.urls()[12].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://newforced/8", querier.urls()[13].url.spec());
-  EXPECT_EQ(16000, querier.urls()[13].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://newforced/9", querier.urls()[14].url.spec());
-  EXPECT_EQ(17000, querier.urls()[14].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://oldforced/7", querier.urls()[15].url.spec());
-  EXPECT_EQ(18000, querier.urls()[15].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://newforced/10", querier.urls()[16].url.spec());
-  EXPECT_EQ(19000, querier.urls()[16].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://newforced/11", querier.urls()[17].url.spec());
-  EXPECT_EQ(20000, querier.urls()[17].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://oldforced/8", querier.urls()[18].url.spec());
-  EXPECT_EQ(21000, querier.urls()[18].last_forced_time.ToJsTime());
-  EXPECT_EQ("http://newforced/12", querier.urls()[19].url.spec());
-  EXPECT_EQ(22000, querier.urls()[19].last_forced_time.ToJsTime());
+  EXPECT_EQ("http://oldforced/2", querier.urls()[0].url.spec());
+  EXPECT_EQ(7000, querier.urls()[0].last_forced_time.ToJsTime());
+  EXPECT_EQ("http://newforced/4", querier.urls()[1].url.spec());
+  EXPECT_EQ(8000, querier.urls()[1].last_forced_time.ToJsTime());
+  EXPECT_EQ("http://newforced/5", querier.urls()[2].url.spec());
+  EXPECT_EQ(9000, querier.urls()[2].last_forced_time.ToJsTime());
+  EXPECT_EQ("http://oldforced/3", querier.urls()[3].url.spec());
+  EXPECT_EQ(10000, querier.urls()[3].last_forced_time.ToJsTime());
+  EXPECT_EQ("http://oldforced/4", querier.urls()[4].url.spec());
+  EXPECT_EQ(11000, querier.urls()[4].last_forced_time.ToJsTime());
+  EXPECT_EQ("http://oldforced/5", querier.urls()[5].url.spec());
+  EXPECT_EQ(12000, querier.urls()[5].last_forced_time.ToJsTime());
+  EXPECT_EQ("http://oldforced/6", querier.urls()[6].url.spec());
+  EXPECT_EQ(13000, querier.urls()[6].last_forced_time.ToJsTime());
+  EXPECT_EQ("http://newforced/6", querier.urls()[7].url.spec());
+  EXPECT_EQ(14000, querier.urls()[7].last_forced_time.ToJsTime());
+  EXPECT_EQ("http://newforced/7", querier.urls()[8].url.spec());
+  EXPECT_EQ(15000, querier.urls()[8].last_forced_time.ToJsTime());
+  EXPECT_EQ("http://newforced/8", querier.urls()[9].url.spec());
+  EXPECT_EQ(16000, querier.urls()[9].last_forced_time.ToJsTime());
 
   // Check first and last non-forced URLs.
-  EXPECT_EQ("http://newnonforced/0", querier.urls()[20].url.spec());
-  EXPECT_TRUE(querier.urls()[20].last_forced_time.is_null());
-  EXPECT_EQ("http://newnonforced/19", querier.urls()[39].url.spec());
-  EXPECT_TRUE(querier.urls()[39].last_forced_time.is_null());
+  EXPECT_EQ("http://newnonforced/0",
+            querier.urls()[kForcedTopSitesCount].url.spec());
+  EXPECT_TRUE(querier.urls()[kForcedTopSitesCount].last_forced_time.is_null());
+
+  size_t non_forced_end_index = querier.urls().size() - 1;
+  EXPECT_EQ("http://newnonforced/9",
+            querier.urls()[non_forced_end_index].url.spec());
+  EXPECT_TRUE(querier.urls()[non_forced_end_index].last_forced_time.is_null());
 }
 
 TEST_F(TopSitesImplTest, SetForcedTopSitesWithCollisions) {
